--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -17,6 +18,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "live-server": "^1.2.0",
     "moment": "^2.19.1",
     "normalize-css": "^2.3.1",
     "raf": "^3.4.0",
@@ -40,6 +42,7 @@
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
     "enzyme-to-json": "^3.2.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^20.0.4",
     "node-sass": "^4.6.0",
     "sass-loader": "^6.0.6",
