--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "express": "^4.16.2",
     "live-server": "^1.2.0",
     "moment": "^2.19.1",
     "normalize-css": "^2.3.1",
