specify node version for heroku

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "expensify",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "6.11.1"
+  }
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/",
