--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run build:prod"
+    "heroku-postbuild": "webpack -p --env production --progress"
   },
   "author": "Nader Eloshaiker",
   "license": "ISC",
