--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/",
-    "build:dev": "webpack",
-    "build:prod": "webpack -p --env production",
+    "build:dev": "webpack --progress",
+    "build:prod": "webpack -p --env production --progress",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "webpack -p --env production --progress"
+    "heroku-postbuild": "webpack -p --env production"
   },
   "author": "Nader Eloshaiker",
   "license": "ISC",
