--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "main": "index.js",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack --progress",
     "build:prod": "webpack -p --env production --progress",
     "dev-server": "webpack-dev-server",
@@ -26,13 +25,8 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "enzyme": "^3.1.1",
-    "enzyme-adapter-react-16": "^1.0.4",
-    "enzyme-to-json": "^3.2.2",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
-    "jest": "^20.0.4",
-    "live-server": "^1.2.0",
     "moment": "^2.19.1",
     "node-sass": "^4.6.0",
     "normalize-css": "^2.3.1",
@@ -44,13 +38,19 @@
     "react-modal": "^3.1.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.1.1",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uuid": "^3.1.0",
     "validator": "^9.1.1",
-    "webpack-dev-server": "^2.9.4",
     "webpack": "^3.8.1"
+  },
+  "devDependencies": {
+    "enzyme": "^3.1.1",
+    "enzyme-adapter-react-16": "^1.0.4",
+    "enzyme-to-json": "^3.2.2",
+    "jest": "^20.0.4",
+    "react-test-renderer": "^16.1.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
