--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.19.1",
     "node-sass": "^4.6.0",
     "normalize-css": "^2.3.1",
+    "numeral": "^2.0.6",
     "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-addons-shallow-compare": "^15.6.2",
